[package]
name = "rdupes"
version = "0.1.0"
authors = ["Edward George <edwardgeorge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9.1"
clap = { version = "4.5.4", features = ["cargo"] }
digest = "0.9.0"
generic-array = "1.0.0"
rayon = "1.10.0"
thiserror = "1.0.26"
walkdir = "2.5.0"
