[package]
name = "rdupes"
version = "0.1.0"
authors = ["Edward George <edwardgeorge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.5.5", features = ["mmap", "rayon"] }
clap = { version = "4.5.21", features = ["cargo", "derive"] }
rayon = "1.10.0"
thiserror = "2.0.7"
walkdir = "2.5.0"
